# VideoDub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  nuitka-build-config.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  videodub_cli.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
scripts/: build.py  build_macos.sh  build_windows.bat  setup_build_env.sh  test_installation.py
src/videodub/: __init__.py  __version__.py  cli.py  config.py  core.py  model_selection.py  processing.py
src/videodub/progress/: __init__.py
src/videodub/utils/: __init__.py
tests/: conftest.py  test_process_video.py  test_smoke.py  test_videodub.py
videodub/: __init__.py  config.py  main.py  process_video.py
videodub/tests/: test_process_video.py
videodub/utils/: select_model.py
