[metadata]
name = videodub
version = 0.1.0
description = A tool for dubbing videos with automatic subtitle generation using OpenAI Whisper
long_description = file: README.md
long_description_content_type = text/markdown
author = Dragon
author_email = fldx123456@163.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/Dragon/VideoDub
project_urls =
    Bug Tracker = https://github.com/Dragon/VideoDub/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openai-whisper>=1.0.0
    torch>=1.9.0
    torchaudio>=0.12.0
    transformers>=4.21.0
    psutil>=5.8.0
    ffmpeg-python>=0.2.0
    numpy>=1.21.0
    sentencepiece>=0.1.99
    accelerate>=0.20.3

[options.entry_points]
console_scripts =
    videodub = videodub.main:main

[flake8]
max-line-length = 120
extend-ignore = E203, W503